fixed spacing issues

--- a/src/app/components/receipt/page.css
+++ b/src/app/components/receipt/page.css
@@ -1,5 +1,4 @@
 .receipt-main{
-    width: 50%;
     margin: 1rem 0 0 1rem;
 }
 
@@ -69,6 +68,7 @@
 }
 
 .item{
+    width: 43rem;
     margin-top: 1rem;
     background-color: #1f1f1f;
     border-radius: 6px;
